--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>testng</artifactId>
             <version>7.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
